--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        {% if title %}
-        <title> {{ title }}</title>
-        {% else %}
-        <title> Welcome to the best news article website </title>
-        {% endif %}
-    </head>
-    <body>
-        <body>
-            <!-- Popular movie section  -->
-            <h3> Popular Source</h3>
-             <ul>
-                {% for popular_source in popular %}
-                    <li>{{ popular_source.id}}</li>
-                {% endfor %}
-            </ul>
-     </body>
 
+<head>
+    <meta charset="utf-8">
+    {% if title %}
+    <title> {{ title }}</title>
+    {% else %}
+    <title> Welcome to the best news article website </title>
+    {% endif %}
+</head>
+
+<body>
+
+    <body>
+        <!-- Popular movie section  -->
+        <h3> Popular Source</h3>
+        <ul>
+            {% for popular_source in popular %}
+            <li>{{ popular_source.id}}</li>
+            {% endfor %}
+        </ul>
+        <!-- Upcoming movie  -->
+        <h3> Upcoming source </h3>
+        <ul>
+            {% for upcoming_source in upcoming %}
+            <li>{{ upcoming_source.title}}</li>
+            {% endfor %}
+        </ul>
+        <!-- Now showing movie -->
+        <h3>Now Showing</h3>
+        <ul>
+            {% for now_showing_source in now_showing %}
+            <li>{{ now_showing_source.title}}</li>
+            {% endfor %}
+        </ul>
     </body>
+
+</body>
+
 </html>
