--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 {% import 'macros.html' as macro%}
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -10,8 +10,10 @@
         {% else %}
         <title> Welcome to the best News Review website </title>
         {% endif %}
-    </head>
-    <body>
+    </head> -->
+<!-- Content block -->
+{% block content %}
+
         <!---The technology sources-->
         <h3>Technology Sources</h3>
 
