--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -15,6 +15,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
                 
         </div>
 
