creation of the error page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,8 @@
     </head> -->
 <!-- Content block -->
 {% block content %}
+        <h2 class="text-center" style="font-family: serif;"> THE BEST NEWS SOURCES AND ARTICLES IN THE WORLD</h2>
+        <hr>
 
         <!---The technology sources-->
         <h3>Technology Sources</h3>
