--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -8,14 +8,13 @@
             <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand text-center" href="/" 
-            style="color: white;font-size: 30px;
+            style="color: white;font-size: 20px;
             font-weight: bold;
-            font-family: 'Times New Roman', Times, serif">Get Your Daily News Today</a>
+            font-family: serif">Get Your Daily News Today</a>
            
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
                 
         </div>
 
