--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-dark bg-primary" role="navigation" style=" min-height: 10vh;  align-items: center; background-color: teal !important ;">
+<div class="navbar navbar-dark bg-primary" role="navigation" style=" min-height: 10vh;  align-items: center; background-color: rgb(128, 19, 0) !important ;">
     <div class="container-fluid" style="margin: 0;">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" >
