--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,9 +1,20 @@
 {% macro displaySourceList(source_list) %}
-
-    {% for source in source_list %}
-        <!-- <li>{{ source.name}}</li>
-        <li>{{ source.url}}</li> -->
-        <a href="/news-source{{ source.id }}" class="btn btn-primary mb-2">{{ source.name }}</a>
-    {% endfor %}
+    <!-- {% for source in source_list %} -->
+    <div class="row">
+        {% for source in source_list %}
+        <div class="col-md-4">
+            <div class="panel panel-default text-center">
+                <div class="panel-heading">
+                    <h5>{{ source.name}}</h5>
+                </div>
+                <div class="panel-body">
+                    <p>{{ source.description}}</p>
+                    <a href="/news-source{{ source.id }}" class="btn btn-primary mb-2">Read Articles</a>    
+                  </div>    
+            </div>
+        </div>
+        {% endfor %}  
+    </div>
+   {% endfor %}
 
 {% endmacro %}
