creation of the article class

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,20 +5,20 @@
         <!-- Content block -->
         {% block content %}
       <div class="text-center">
-          <!-- Top News -->
+          <!-- Technology Sources -->
         <h3> Technology Sources </h3>
         <hr>
         <ul>
             {{ macro.displaySourceList( technology)}}
         </ul>
         <!--Business Sources  -->
-        <h3> Business Sourses </h3>
+        <h3 class="text-center"> Business Sourses </h3>
         <hr>
         <ul>
             {{ macro.displaySourceList( business )}}
         </ul>
         <!-- Sports Sources -->
-        <h3> Sports Sources </h3>
+        <h3 class="text-center"> Sports Sources </h3>
         <hr>
         <ul>
             {{ macro.displaySourceList( sport )}}
