--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -4,13 +4,40 @@
         {% for source in source_list %}
         <div class="col-md-4">
             <div class="panel panel-default text-center">
-                <div class="panel-heading">
+                <!-- <div class="panel-heading">
                     <h5>{{ source.name}}</h5>
                 </div>
                 <div class="panel-body">
                     <p>{{ source.description[:50]}}</p>
                     <a href="/news-source{{ source.id }}" class="btn btn-primary mb-2">Read Articles</a>    
-                  </div>    
+                  </div>     -->
+                  <div class="panel-heading">
+                    <img src="{{articles.urlToImage}}" alt="">
+                 </div>
+                 <div class="panel-body">
+                     <p>{{ source.description[:50]}}</p>
+                     <a href="/news-source{{ source.id }}" class="btn btn-primary mb-2">Read More</a>    
+                 </div> 
+            </div>
+        </div>
+        {% endfor %}  
+    </div>
+  
+
+{% endmacro %}
+{% macro displayArticlesList(article_list) %}
+   
+    <div class="row">
+        {% for article in article_list %}
+        <div class="col-md-4">
+            <div class="panel panel-default text-center">
+                <div class="panel-heading">
+                   <img src="{{articles.urlToImage}}" alt="">
+                </div>
+                <!-- <div class="panel-body">
+                    <p>{{ source.description[:50]}}</p>
+                    <a href="/news-source{{ source.id }}" class="btn btn-primary mb-2">Read More</a>    
+                </div>     -->
             </div>
         </div>
         {% endfor %}  
