--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -13,7 +13,7 @@
                    
                  <div class="panel-body">
                      <p>{{ source.description[:50]}}</p>
-                     <a href="/articles/{{ source.id }}" class="btn btn-primary mb-2">View Details</a>    
+                     <a href="/articles/{{ source.id }}" class="btn btn-primary mb-2">View Details{{source.name}}</a>    
                  </div> 
             </div>
         </div>
