--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -21,6 +21,8 @@
     </div>
 {% endmacro %}
 {% macro displayArticlesList(articles_list) %}
+   <div class="container">
+       <h1 class="text-center" style="Font-size:40px; color:rgb(128, 19, 0);font-family: serif; ">Let's Read The articles</h1>
    
     <div class="row">
         {% for articles in articles_list %}
@@ -34,11 +36,14 @@
                     <img src="{{articles.urlToImage}}" alt="{{articles.author}}" class="img-responsive" styles="height:30px"> 
                      <p>{{ articles.description | truncate(80)}}</p>
                      <a href="{{ articles.url }}" class="btn btn-primary mb-2">Read More</a>   
+                     <P>{{articles.publishedAt}}</P>
                 </div>    
             </div>
         </div>
         {% endfor %}  
     </div>
+ 
+</div>
   
 
 {% endmacro %}
