changes in the trunation

--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -1,6 +1,6 @@
 
 {% extends 'base.html'%}
-<!-- {% import 'macros.html' as macro%} -->
+{% import 'macros.html' as macro%}
 
 
         {% block content %}
