--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="panel-body" style="color: white;background-color: rgb(128, 19, 0);">
                     <img src="{{articles.urlToImage}}" alt="{{articles.author}}" class="img-responsive" styles="height:30px"> 
-                     <p>{{ articles.description | truncate(80)}}</p>
+                     <p>{{ articles.description}}</p>
                      <a href="{{ articles.url }}" class="btn btn-primary mb-2">Read More</a>   
                      <P>publishedat:{{articles.publishedAt}}</P>
                 </div>    
