removal of the batch

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -35,7 +35,7 @@
                 <div class="panel-body" style="color: white;background-color: rgb(128, 19, 0);">
                     <img src="{{articles.urlToImage}}" alt="{{articles.author}}" class="img-responsive" styles="height:30px"> 
                      <p>{{ articles.description}}</p>
-                     <a href="{{ articles.url }}" class="btn btn-primary mb-2">Read More</a>   
+                     <a href="{{ articles.url }}" class="btn btn-primary mb-2">Read More</a> <br>  
                      <P>publishedat:{{articles.publishedAt}}</P>
                 </div>    
             </div>
