--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -16,6 +16,9 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+                <li><a href="/"></a>Technology Sources</li>
+            </ul>
+
                 
         </div>
 
