changes in the navbar

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -16,7 +16,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/"></a>Technology Sources</li>
+                <!-- <li><a href="/"></a>Technology Sources</li> -->
             </ul>
 
                 
